--- a/src/data-seeding/roles/qa-scopes-editor.html
+++ b/src/data-seeding/roles/qa-scopes-editor.html
@@ -41,9 +41,53 @@
       async function fetchRoles() {
         const response = await fetch('/roles')
         roles = await response.json()
-        const allScopes = Array.from(
-          new Set(roles.flatMap((role) => role.scopes))
-        ).sort()
+        // 1.7 scopes
+        const allScopes = [
+          'record.declare-birth',
+          'record.declare-birth:my-jurisdiction',
+          'record.declare-death',
+          'record.declare-death:my-jurisdiction',
+          'record.declare-marriage',
+          'record.declare-marriage:my-jurisdiction',
+          'record.declaration-submit-incomplete',
+          'record.declaration-submit-for-review',
+          'record.unassign-others',
+          'record.declaration-submit-for-approval',
+          'record.declaration-submit-for-updates',
+          'record.declaration-edit',
+          'record.review-duplicates',
+          'record.declaration-archive',
+          'record.declaration-reinstate',
+          'record.register',
+          'record.export-records',
+          'record.declaration-print',
+          'record.declaration-print-supporting-documents',
+          'record.registration-print&issue-certified-copies',
+          'record.registration-request-correction',
+          'record.registration-correct',
+          'search.birth:my-jurisdiction',
+          'search.birth',
+          'search.death:my-jurisdiction',
+          'search.death',
+          'search.marriage:my-jurisdiction',
+          'search.marriage',
+          'profile.electronic-signature',
+          'performance.read',
+          'performance.read-dashboards',
+          'performance.vital-statistics-export',
+          'organisation.read-locations:all',
+          'organisation.read-locations:my-office',
+          'organisation.read-locations:my-jurisdiction',
+          'user.read:all',
+          'user.read:my-office',
+          'user.read:my-jurisdiction',
+          'user.read:only-my-audit',
+          'user.create:all',
+          'user.create:my-jurisdiction',
+          'user.update:all',
+          'user.update:my-jurisdiction',
+          'config.update:all'
+        ].sort()
 
         const templateSource =
           document.getElementById('roles-template').innerHTML
