chore: add confirm registration scope in the ui for testing

--- a/src/data-seeding/roles/qa-scopes-editor.html
+++ b/src/data-seeding/roles/qa-scopes-editor.html
@@ -59,6 +59,8 @@
           'record.declaration-archive',
           'record.declaration-reinstate',
           'record.register',
+          'record.confirm-registration',
+          'record.reject-registration',
           'record.export-records',
           'record.declaration-print',
           'record.declaration-print-supporting-documents',
